<resources>

    <string name="app_name">"StorageApp"</string>
    <string name="action_take">"Take"</string>
    <string name="action_put">"Put"</string>
    <string name="action_menu">"Open Menu"</string>
    <string name="action_login">"Change User"</string>
    <string name="barcode_install_prompt_title">"Barcode Reader not installed"</string>
    <string name="no_user_token">"No User Token specified"</string>
    <string name="profile_login_hint">"User Id"</string>
    <string name="dialog_login_ok">"Send"</string>
    <string name="activity_profile">"Profile"</string>
    <string name="login">"Login"</string>
    <string name="logout">"Logout"</string>
    <string name="profile_logged_out">"You are currently not logged in"</string>
    <string name="profile_logged_in">"You are currently logged in as: &quot;%1$s&quot;"</string>
    <string name="unknown_error">"An unknown error has occurred."</string>
    <string name="activity_scan">"Barcode Scan"</string>
    <string name="scan_hint">"Scan [%1$d / %2$d]"</string>
    <string name="scan_error_title">"Scan Error"</string>
    <string name="scan_error_close">"Close"</string>
    <string name="scan_error_general">"An unknown error has occurred."</string>
    <string name="scan_error_network">"You have no internet connection or the service is not reachable. Please check your settings and try again later."</string>
    <string name="scan_error_authentication">"You are not logged in. Please enter your userId first on profile page."</string>
    <string name="scan_accepted">"Scanned Barcode %1$s"</string>
    <string name="dialog_ok">"OK"</string>
    <string name="dialog_settings">"Settings"</string>
    <string name="permission_rationale">"Please grant Camera permission to be able to scan a barcode."</string>
    <string name="permission_rationale_title">"Permission Required"</string>
    <string name="permission_settings_message">"Please grant Camera permission to be able to scan a barcode. Please go to settings"</string>
    <string name="permission_settings">"Please grant Camera permission to be able to scan a barcode. Please go to settings"</string>
    <string name="activity_settings">"Settings"</string>
    <string name="setting_ip_title">"Server-IP"</string>
    <string name="setting_ip_hint">"134.30.10.176"</string>
    <string name="setting_ip_description">"Enter alternative IP here"</string>
    <string name="setting_ip_send">"Update"</string>

</resources>
