<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="de.boettcher.storage.settings.SettingsViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:background="?attr/colorPrimary"
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/activity_profile"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_behavior">

            <TextView
                android:id="@+id/title_ip"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/setting_ip_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:hint="@string/setting_ip_hint"
                android:id="@+id/input_ip"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@={viewModel.endpoint}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_ip"
                app:layout_constraintWidth_percent="0.4"/>

            <TextView
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:text="@string/setting_ip_description"
                app:layout_constraintBottom_toBottomOf="@id/input_ip"
                app:layout_constraintStart_toEndOf="@id/input_ip"
                app:layout_constraintTop_toTopOf="@id/input_ip"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:onClick="@{() -> viewModel.onUpdateEndpoint()}"
                android:padding="8dp"
                android:text="@string/setting_ip_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_ip"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
