<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.boettcher.storage.home.HomeViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context="de.boettcher.storage.home.HomeActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:background="?attr/colorPrimary"
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_behavior">

            <Button
                android:background="@drawable/take_background"
                android:id="@+id/take"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:onClick="@{() -> viewModel.take()}"
                android:text="@string/action_take"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/put"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:background="@drawable/put_background"
                android:id="@+id/put"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:text="@string/action_put"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/take"/>

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/action_login"
                android:focusable="true"
                android:id="@+id/login"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:minHeight="48dp"
                android:onClick="@{() -> viewModel.onLoginClicked()}"
                android:src="@drawable/ic_vpn_key_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/extra"
                app:layout_constraintTop_toBottomOf="@id/put"/>

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/action_menu"
                android:focusable="true"
                android:id="@+id/extra"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_menu_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/login"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/put"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>

