<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.boettcher.storage.profile.ProfileViewModel"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context="de.boettcher.storage.profile.ProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:background="?attr/colorPrimary"
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/activity_profile"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_behavior="@string/appbar_behavior">

            <TextView
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/title"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:text="@{viewModel.title}"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="You are currently logged in as igelEi"/>

            <android.support.design.widget.TextInputLayout
                android:hint="@string/profile_login_hint"
                android:id="@+id/user_id"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:visibility="@{!viewModel.isLoggedIn}">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLength="3"
                    android:text="@={viewModel.input}"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:id="@+id/login"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_id"
                app:visibility="@{!viewModel.isLoggedIn}"/>

            <Button
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:id="@+id/logout"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:onClick="@{() -> viewModel.logout()}"
                android:text="@string/logout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_id"
                app:visibility="@{viewModel.isLoggedIn}"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>
